pjaxify branch products links

--- a/views/branches/kfz.mustache
+++ b/views/branches/kfz.mustache
@@ -13,7 +13,7 @@
       <div class="product-selector expandable-grid">
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>PKW</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -37,7 +37,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Moped</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -61,7 +61,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Krad</span>
             <span class="product-selector-item-info">Kraftfahrtrad</span>
           </a>
@@ -85,7 +85,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Trike und Quad</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -109,7 +109,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Kleine LKW</span>
             <span class="product-selector-item-info">bis 3,5 Tonnen Gesamtmasse</span>
           </a>
@@ -133,7 +133,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Große LKW</span>
             <span class="product-selector-item-info">über 3,5 Tonnen Gesamtmasse</span>
           </a>
@@ -157,7 +157,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Anhänger</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -181,7 +181,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Landwirtschaftl. Zugmaschine</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -205,7 +205,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Zugmaschine</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -229,7 +229,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Wohnmobil</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -253,7 +253,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Wohnwagen</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -277,7 +277,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Oldtimer</span>
             <span class="product-selector-item-info"></span>
           </a>
@@ -301,7 +301,7 @@
 
 
         <div class="product-selector-item expandable-grid-item">
-          <a href="{{ partner._links.contracts.href }}/new" class="product-selector-item-link">
+          <a href="{{ partner._links.contracts.href }}/new" data-pjax="active" class="product-selector-item-link">
             <span>Gewerbe FuhrparkPlus</span>
             <span class="product-selector-item-info"></span>
           </a>
