--- a/views/partials/branches.mustache
+++ b/views/partials/branches.mustache
@@ -8,7 +8,7 @@
     <ul class="branch-selector">
       {{# branches }}
       <li class="branch-selector-item">
-        <a href="{{ partner._links.self.href }}/branches/{{ classname }}" class="branch-selector-item-link">
+        <a href="{{ partner._links.self.href }}/branches/{{ classname }}" data-pjax="active" class="branch-selector-item-link">
           <i class="branch-selector-item-icon {{ classname }}"></i>
           <span class="branch-selector-item-caption">{{ label }}</span>
           {{# numberOfContracts }}
