Integrate Letters App

--- a/views/contracts/show.mustache
+++ b/views/contracts/show.mustache
@@ -283,6 +283,11 @@
       <div class="btn-group">
         <a href="{{ contract.contractEditUri }}" class="btn btn-default">Vertrag bearbeiten</a>
       </div>
+
+      <div class="btn-group">
+        <a href="{{ letter_url }}/template?contractId={{ contractId }}&partnerId={{ partnerId }}" class="btn btn-default">Brief schreiben</a>
+      </div>
+
     </div>
   </div>
 
